feat: 支持 RAG 知识Embedding向量持久化
- 新增 knowledge_chunk_embedding 知识向量表
- 新增 KnowledgeChunkEmbeddingEntity 和 KnowledgeChunkEmbeddingMapper
- 新增 DatabaseEmbeddingRepository 负责向量复用与持久化
- 支持根据知识向量化文本计算 contentHash
- 知识内容未变化时复用数据库已有向量
- 知识内容变化时重新调用 Embedding 模型并更新向量
- 支持以 JSON 字符串保存和读取 Embedding 向量
- EmbeddingKnowledgeRetriever.reload 返回复用、新生成和失败数量
- /ai/knowledge/reload 返回 EmbeddingReloadResult
- 验证修改单条知识时仅重新生成该知识向量
- 验证向量持久化后 RAG 问答链路正常
- 减少重复向量化调用，为大规模知识库检索打基础